fix the style of text to truncate on certain size

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -187,6 +187,7 @@ body {
   padding: 14px;
   display: flex;
   align-items: center;
+  width: 100%;
 }
 .nav__profile__pic {
   position: absolute;
@@ -201,12 +202,20 @@ body {
 }
 .nav__profile__info {
   margin-left: 3.5rem;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .nav__name {
   display: block;
   font-weight: 700;
   font-size: 1rem;
+  width: 100%;
+  padding-right: 1rem;
   color: white;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .nav__position {
   font-weight: 400;
@@ -258,6 +267,9 @@ body {
   width: 100%;
   padding-block: 0.6rem;
   padding-inline: 24px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .nav ul li a:hover {
   font-weight: 400;
@@ -506,6 +518,8 @@ body {
 }
 .content__item__name {
   font-weight: 700;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 .content__item__desc {
@@ -612,6 +626,13 @@ body {
     display: flex;
     gap: 2rem;
     align-items: center;
+  }
+  .content__item__name {
+    min-width: 15ch;
+    max-width: 15ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 @media (min-width: 60em) {
@@ -1444,6 +1465,9 @@ input[type=number] {
   background-color: #e8e8e8;
   width: 100%;
   margin-bottom: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .form-error {
