--- a/src/sass/components/_search.scss
+++ b/src/sass/components/_search.scss
@@ -29,5 +29,8 @@
         background-color: variables.$clr-dark-50;
         width: 100%;
         margin-bottom: 8px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 }
